--- a/Files/haproxy.cfg
+++ b/Files/haproxy.cfg
@@ -46,4 +46,4 @@ backend nodes
         cookie SERVERID insert indirect nocache
         server SeedDMS-1 10.33.105.7:80 check cookie s1  ### Change backend Private IPs
         server SeedDMS-2 10.33.105.4:80 check cookie s2
-        server SeedDMs-3 10.33.105.6:80 check cookie s3
+        server SeedDMS-3 10.33.105.6:80 check cookie s3
